--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "test": "react-scripts test",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "rm -rf node_modules/rollup && npm install rollup"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
