--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "react-scripts test",
     "lint": "eslint .",
     "preview": "vite preview",
-    "postinstall": "rm -rf node_modules/rollup && npm install rollup"
+    "postinstall": "rimraf node_modules/rollup && npm install rollup"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
@@ -38,6 +38,7 @@
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.5.3",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.5",
     "vite": "^6.3.1",
     "vitest": "^3.1.2"
